# google-cloud-cpp

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel
bazel/: crc32c.BUILD  google_cloud_cpp_deps.bzl
docfx/: BUILD.bazel
examples/: BUILD.bazel
generator/: BUILD.bazel
generator/integration_tests/: BUILD.bazel
google/cloud/: BUILD.bazel  capture_build_info.bzl
google/cloud/bigquery/: BUILD.bazel
google/cloud/bigtable/: BUILD.bazel
google/cloud/bigtable/test_proxy/: BUILD.bazel
google/cloud/compute/: compute_library.bzl
google/cloud/pubsub/samples/: BUILD.bazel
google/cloud/pubsublite/: BUILD.bazel
google/cloud/spanner/: BUILD.bazel
google/cloud/spanner/integration_tests/: BUILD.bazel
google/cloud/spanner/samples/: BUILD.bazel
google/cloud/sql/: BUILD.bazel
google/cloud/storage/: BUILD.bazel
google/cloud/storage/benchmarks/: BUILD.bazel
google/cloud/storage/examples/: BUILD.bazel
google/cloud/storage/tests/: BUILD.bazel
google/cloud/testing_util/: BUILD.bazel
protos/google/cloud/compute/: BUILD.bazel
