module(
    name = "google-cloud-cpp",
    version = "2.25.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "curl", version = "8.7.1")
bazel_dep(name = "libpfm", version = "4.11.0")
bazel_dep(name = "opentelemetry-cpp", version = "1.14.2")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "grpc", version = "1.63.1")
bazel_dep(name = "boringssl", version = "0.0.0-20240530-2db0eb3")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
bazel_dep(name = "protobuf", version = "27.1.bcr.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "rules_apple", version = "3.5.1")
bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_proto", version = "6.0.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.8.4")

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    grpc = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")
